pod-security-windows/restricted/require-run-as-non-root-user/require-run-as-non-root-user.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-run-as-non-root-user
  annotations:
    policies.kyverno.io/title: Require Run As Non-Root User
    policies.kyverno.io/category: Pod Security Standards (Restricted)
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    kyverno.io/kyverno-version: 1.6.0
    kyverno.io/kubernetes-version: "1.22-1.23"
    policies.nirmata.io/remediation-docs: "N/A"
    policies.kyverno.io/description: >-
      Containers must be required to run as non-root users. This policy ensures that the fields 
      spec.securityContext.windowsOptions.runAsUserName,
      spec.containers[*].securityContext.windowsOptions.runAsUserName, 
      spec.initContainers[*].securityContext.windowsOptions.runAsUserName,
      and  is either unset or set to ContainerUser.
spec:
  validationFailureAction: enforce
  background: true
  rules:
    - name: run-as-non-root-user
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: >-
          Running the container as root user is not allowed.
        pattern:
          spec:
            =(securityContext):
              =(windowsOptions):
                =(runAsUserName): "ContainerUser"
            =(initContainers):
              - =(securityContext):
                  =(windowsOptions):
                    =(runAsUserName): "ContainerUser"
            containers:
              - =(securityContext):
                  =(windowsOptions):
                    =(runAsUserName): "ContainerUser"
